--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <h1>Eliott Livolsi's Web Dev Portfolio</h1>
     <h2>I'm a web developer :)</h2>
             <hr />
-    <h2><a href="http://127.0.0.1:3002/2.4%20Movie%20Ranking%20Project/index.html">Movie Ranking Project</a></h2>
+   <!-- <h2><a href="http://127.0.0.1:3002/2.4%20Movie%20Ranking%20Project/index.html">Movie Ranking Project</a></h2> -->
+
+    <h2><a href="http://127.0.0.1:3000/4.3 HTML Porfolio Project/public/movie-ranking.html">Movie Ranking Project</a></h2>
 
         <img src="./assets/images/Screenshot 2024-07-30 101619.png" alt="screnshot of a movie ranking list" 
             height = "250"
